--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
@@ -28,5 +29,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "sequelize": "^5.8.5"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "babel-plugin-transform-es2015-spread": "^6.22.0"
   }
 }
